--- a/ansible/roles/mongodb_role/tasks/main.yml
+++ b/ansible/roles/mongodb_role/tasks/main.yml
@@ -31,3 +31,71 @@
     enabled: yes
     daemon_reload: yes
 
+# Remove old Docker versions
+- name: Remove old Docker versions
+  yum:
+    name:
+      - docker
+      - docker-client
+      - docker-client-latest
+      - docker-common
+      - docker-latest
+      - docker-latest-logrotate
+      - docker-logrotate
+      - docker-engine
+    state: absent
+  ignore_errors: yes
+
+# Install required packages
+- name: Install yum-utils
+  yum:
+    name: yum-utils
+    state: present
+
+# Add Docker repo
+- name: Add Docker CE repository
+  get_url:
+    url: https://download.docker.com/linux/centos/docker-ce.repo
+    dest: /etc/yum.repos.d/docker-ce.repo
+
+# Install Docker
+- name: Install Docker Engine
+  yum:
+    name:
+      - docker-ce
+      - docker-ce-cli
+      - containerd.io
+    state: present
+
+# Start and enable Docker service
+- name: Ensure Docker service is running and enabled
+  systemd:
+    name: docker
+    state: started
+    enabled: yes
+
+# Add prometheus group
+- name: Add prometheus group
+  group:
+    name: prometheus
+    system: yes
+
+# Add prometheus user
+- name: Add prometheus user
+  user:
+    name: prometheus
+    shell: /sbin/nologin
+    system: yes
+    group: prometheus
+
+# Run MongoDB exporter container
+- name: Run MongoDB exporter container
+  docker_container:
+    name: mongodb_exporter
+    image: percona/mongodb_exporter:0.44
+    state: started
+    restart_policy: unless-stopped
+    published_ports:
+      - "9216:9216"
+    command: "--mongodb.uri=mongodb://127.0.0.1:17001"
+
